--- a/app/assets/stylesheets/banner.scss
+++ b/app/assets/stylesheets/banner.scss
@@ -1,4 +1,21 @@
 #banner {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 400px;
   width: 100%;
+  background-image: image-url('banner_wood_texture.jpg');
+
+  #banner-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    background-color: #eeeeee;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    max-width: 650px;
+    max-height: 200px;
+    padding: 40px;
+  }
 }
