created schedule and timeline

--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -1,3 +1,8 @@
 #root {
   font-family: 'Old Standard TT', serif;
 }
+.flex-center{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
