added schedule icons

--- a/app/assets/javascripts/component_constants/events.js.erb
+++ b/app/assets/javascripts/component_constants/events.js.erb
@@ -4,27 +4,27 @@ const Events = [
         description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
         startTime: '5:00pm',
         endTime: '6:00pm',
-        image: 'http://placehold.it/150x150'
+        image: "<%= asset_path('drinks_icon.svg') %>"
     },
     {
         title: 'Ceremony',
         description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
         startTime: '6:00pm',
         endTime: '6:30pm',
-        image: 'http://placehold.it/150x150'
+        image: "<%= asset_path('ceremony_icon.svg') %>"
     },
     {
         title: 'Reception',
         description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
         startTime: '6:30pm',
         endTime: '11:00pm',
-        image: 'http://placehold.it/150x150'
+        image: "<%= asset_path('wedding_cake_icon') %>"
     },
     {
         title: 'Wrap-up',
         description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
         startTime: '11:00pm',
         endTime: '1:00am',
-        image: 'http://placehold.it/150x150'
+        image: "<%= asset_path('celebrate_icon.svg') %>"
     }
 ];
