--- a/app/assets/stylesheets/banner.scss
+++ b/app/assets/stylesheets/banner.scss
@@ -17,5 +17,12 @@
     max-width: 650px;
     max-height: 200px;
     padding: 40px;
+    position: relative;
+    img {
+      position: absolute;
+      top: 0;
+      left: -100px;
+      height: 100%;
+    }
   }
 }
