--- a/app/assets/stylesheets/banner.scss
+++ b/app/assets/stylesheets/banner.scss
@@ -4,7 +4,8 @@
   justify-content: center;
   min-height: 400px;
   width: 100%;
-  background-image: image-url('banner_wood_texture.jpg');
+  background-image: image_url('banner_wood_texture_light.jpg');
+  background-size: cover;
 
   #banner-title {
     display: flex;
@@ -23,6 +24,12 @@
       top: 0;
       left: -100px;
       height: 100%;
+    }
+    h1 {
+      margin-bottom: 0;
+    }
+    h2 {
+      margin-top: 0;
     }
   }
 }
