--- a/app/assets/stylesheets/banner.scss
+++ b/app/assets/stylesheets/banner.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   min-height: 400px;
   width: 100%;
-  background-image: image_url('banner_wood_texture_light.jpg');
+  background-image: image_url('banner_wood_texture.jpg');
   background-size: cover;
 
   #banner-title {
