--- a/app/assets/stylesheets/accommodations.scss
+++ b/app/assets/stylesheets/accommodations.scss
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin-bottom: 15px;
     .icon {
       width: 100px;
       height: 100px;
