--- a/app/assets/stylesheets/location.scss
+++ b/app/assets/stylesheets/location.scss
@@ -14,10 +14,11 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       width: 100%;
       img {
         width: 100px;
+        margin: 10px;
         border-radius: 50%;
         cursor: pointer;
       }
