--- a/app/assets/stylesheets/location.scss
+++ b/app/assets/stylesheets/location.scss
@@ -29,7 +29,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     height: 350px;
     img {
       width: 100%;
