created initial rsvp functionality

--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -9,3 +9,9 @@
 .section {
   margin-bottom: 50px;
 }
+
+.alert-danger {
+  background-color: #FB476C !important;
+  border-color: #FB476C !important;
+  color: #fff !important;
+}
