--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -1,23 +1,21 @@
 #rsvp {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  height: 100%;
-  width: 100%;
-  color: #1fc08e;
-  input[type=text] {
-    text-align: center;
-    color: #1fc08e;
-    font-size: 14pt;
-    border: 0 solid #1fc08e;
-    border-bottom-width: 2px;
-    background-color: transparent;
-    margin-bottom: 15px;
+  .title {
+    border-bottom: 2px solid #eeeeee;
+    margin-bottom: 25px;
   }
-  .btn-rsvp {
-    background-color: #1fc08e;
-    border-color: #1fc08e;
-    color: #fff;
+  .input-group {
+    height: 75px;
+    max-width: 300px;
+    margin-bottom: 15px;
+
+    input[type=text] {
+      text-align: center;
+      height: 100%;
+      font-size: 40pt;
+    }
   }
 }
