--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -18,4 +18,15 @@
       font-size: 40pt;
     }
   }
+
+  #children {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14pt;
+    .checkbox {
+      margin: 10px;
+    }
+  }
 }
