created page footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,13 @@
 
   <body>
     <%= yield %>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted pull-right">
+          Questions or Comments?
+          <a href="mailto:reidjohnwedding@gmail.com">Email Us!</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
