--- a/app/assets/javascripts/component_constants/location_images.js.erb
+++ b/app/assets/javascripts/component_constants/location_images.js.erb
@@ -1,5 +1,6 @@
 const LocationImages = [
     "<%= asset_path('am_outside_1.jpg') %>",
     "<%= asset_path('am_outside_2.jpg') %>",
-    "<%= asset_path('am_inside_1.jpg') %>"
+    "<%= asset_path('am_inside_1.jpg') %>",
+    "<%= asset_path('am_map.jpg') %>"
 ];
