--- a/app/assets/stylesheets/location.scss
+++ b/app/assets/stylesheets/location.scss
@@ -19,6 +19,7 @@
       img {
         width: 100px;
         margin: 10px;
+        max-height: 67px;
         border-radius: 50%;
         cursor: pointer;
       }
@@ -34,6 +35,7 @@
     height: 350px;
     img {
       width: 100%;
+      max-height: 334px;
       border-radius: 10px;
     }
   }
