layout adjustments, cross browser updates

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -9,6 +9,9 @@
   .event {
     padding-bottom: 50px;
     .event-image {
+      img {
+        width: 100%;
+      }
     }
     .event-description{
       flex-direction: column;
