--- a/app/assets/javascripts/component_constants/events.js.erb
+++ b/app/assets/javascripts/component_constants/events.js.erb
@@ -1,28 +1,28 @@
 const Events = [
     {
         title: 'Welcome Drinks',
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
+        description: 'Doors open at 5pm, and you are welcome to arrive any time between 5 and 6 to enjoy some beverages before the ceremony at 6. Parking is available on site',
         startTime: '5:00pm',
         endTime: '6:00pm',
         image: "<%= asset_path('drinks_icon.svg') %>"
     },
     {
         title: 'Ceremony',
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
+        description: 'The ceremony will start at 6pm. It will be a simple ceremony held in Pond Gallery.',
         startTime: '6:00pm',
         endTime: '6:30pm',
         image: "<%= asset_path('ceremony_icon.svg') %>"
     },
     {
         title: 'Reception',
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
+        description: 'After the ceremony, reception will follow in the Main Mill area. There will be an open bar serving drinks all night from the Turbine Room, and appetizers will be available in the main area',
         startTime: '6:30pm',
         endTime: '11:00pm',
         image: "<%= asset_path('wedding_cake_icon.svg') %>"
     },
     {
         title: 'Wrap-up',
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non libero euismod, cursus sapien non, tristique nisl. Nunc arcu velit, aliquam id gravida eu, feugiat id odio. Vestibulum mattis eros diam, vel vestibulum odio euismod a. Duis ligula lectus, blandit ut sem id, luctus congue libero. Aenean auctor nulla a.',
+        description: 'At this time the venue requires that we start winding things down, but the celebration does not have to stop. The band will be wrapping up their final set, and some adjustments will be made to reduce overall noise. Please feel free to make travel arrangements for this time but the party will continue until 1 am.',
         startTime: '11:00pm',
         endTime: '1:00am',
         image: "<%= asset_path('celebrate_icon.svg') %>"
