more event updates

--- a/app/assets/javascripts/component_constants/events.js.erb
+++ b/app/assets/javascripts/component_constants/events.js.erb
@@ -15,7 +15,7 @@ const Events = [
     },
     {
         title: 'Reception',
-        description: 'After the ceremony, reception will follow in the Main Mill area. There will be an open bar serving drinks all night from the Turbine Room, and appetizers will be available in the main area',
+        description: 'After the ceremony, reception will follow in the Main Mill area. There will be an open bar serving drinks all night from the Turbine Room. There will not be a formal dinner served, but there will be plenty of food available throughout the evening.',
         startTime: '6:30pm',
         endTime: '11:00pm',
         image: "<%= asset_path('wedding_cake_icon.svg') %>"
