--- a/app/assets/javascripts/components/banner.js.jsx.erb
+++ b/app/assets/javascripts/components/banner.js.jsx.erb
@@ -3,7 +3,7 @@ var BannerTitle = React.createClass({
         return (
             <div id="banner-title" className="container">
               <h1>Samantha & Liam</h1>
-              <h2>August 25th, 2017</h2>
+              <h2>Friday, August 25th, 2017</h2>
               <img src="<%= asset_path('couple_dancing_icon.svg') %>" className="hidden-xs"/>
             </div>
         );
